Prepare for packaging

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -103,7 +103,11 @@ set(CMAKE_THREAD_PREFER_PTHREAD)
 set(THREADS_PREFER_PTHREAD_FLAG)
 find_package(Threads)
 
-find_package(libconfig REQUIRED)
+find_package(libconfig QUIET)
+if(NOT libconfig_FOUND)
+	add_git_submodule(libconfig EXCLUDE_FROM_ALL)
+endif()
+
 find_package(gxrio QUIET)
 
 if(NOT gxrio_FOUND)
@@ -176,15 +180,20 @@ if(ENABLE_TESTING)
 	add_test(NAME dssp-unit-test COMMAND $<TARGET_FILE:dssp-unit-test> -- ${PROJECT_SOURCE_DIR}/test)
 endif()
 
-option(DSSP_BUILD_INSTALLER "Build an installer" OFF)
+include(InstallRequiredSystemLibraries)
+set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
 
-if(DSSP_BUILD_INSTALLER)
-	include(InstallRequiredSystemLibraries)
-	set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
+# Tarball generation
+set(CPACK_SOURCE_TGZ ON)
+set(CPACK_SOURCE_TBZ2 OFF)
+set(CPACK_SOURCE_TXZ OFF)
+set(CPACK_SOURCE_TZ OFF)
+set(CPACK_SOURCE_IGNORE_FILES "/data/components.cif;/build;/.vscode;/.git")
+set (CPACK_PACKAGE_FILE_NAME "${PROJECT_NAME}-${PROJECT_VERSION}")
+set (CPACK_SOURCE_PACKAGE_FILE_NAME ${CPACK_PACKAGE_FILE_NAME})
 
-	# NSIS options
-	set(CPACK_NSIS_MODIFY_PATH ON)
+# NSIS options
+set(CPACK_NSIS_MODIFY_PATH ON)
 
-	# configuration done, include CPack
-	include(CPack)
-endif()
+# configuration done, include CPack
+include(CPack)
