make extensions.dic visible for client

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -211,7 +211,9 @@ install(TARGETS ${PROJECT_NAME}
 	RUNTIME DESTINATION ${BIN_INSTALL_DIR}
 )
 
-install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/mmcif_pdbx/dssp-extension.dic" DESTINATION ${CIFPP_SHARE_DIR})
+set(DSSP_EXTENSIONS_DIC "${CMAKE_CURRENT_SOURCE_DIR}/mmcif_pdbx/dssp-extension.dic")
+
+install(FILES ${DSSP_EXTENSIONS_DIC} DESTINATION ${CIFPP_SHARE_DIR})
 
 # manual
 find_program(PANDOC pandoc)
