--- a/cmake/dsspConfig.cmake.in
+++ b/cmake/dsspConfig.cmake.in
@@ -5,4 +5,6 @@ find_dependency(cifpp REQUIRED)
 
 INCLUDE("${CMAKE_CURRENT_LIST_DIR}/dsspTargets.cmake")
 
+set_and_check(DSSP_SHARE_DIR "@PACKAGE_DSSP_DATA_DIR@")
+
 check_required_components(dssp)
