Remove dssp_data_dir again, not needed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -165,13 +165,11 @@ install(
 )
 
 set(CONFIG_TEMPLATE_FILE ${PROJECT_SOURCE_DIR}/cmake/dsspConfig.cmake.in)
-set(DSSP_DATA_DIR "${CMAKE_INSTALL_FULL_DATADIR}/libcifpp")
 
 configure_package_config_file(
 	${CONFIG_TEMPLATE_FILE}
 	${CMAKE_CURRENT_BINARY_DIR}/dssp/dsspConfig.cmake
 	INSTALL_DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/dssp
-	PATH_VARS DSSP_DATA_DIR
 )
 
 install(FILES
@@ -213,7 +211,7 @@ install(TARGETS ${PROJECT_NAME}
 	RUNTIME DESTINATION ${BIN_INSTALL_DIR}
 )
 
-install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/mmcif_pdbx/dssp-extension.dic" DESTINATION ${DSSP_DATA_DIR})
+install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/mmcif_pdbx/dssp-extension.dic" DESTINATION ${CIFPP_SHARE_DIR})
 
 # manual
 find_program(PANDOC pandoc)
