Fixed unit tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -265,7 +265,9 @@ if(ENABLE_TESTING)
 	add_executable(unit-test-dssp ${PROJECT_SOURCE_DIR}/test/unit-test-dssp.cpp ${PROJECT_SOURCE_DIR}/src/dssp-io.cpp)
 
 	if(USE_RSRC)
-		mrc_target_resources(unit-test-dssp ${CIFPP_SHARE_DIR}/mmcif_pdbx.dic ${CIFPP_SHARE_DIR}/mmcif_ddl.dic)
+		mrc_target_resources(unit-test-dssp
+			${CIFPP_SHARE_DIR}/mmcif_pdbx.dic ${CIFPP_SHARE_DIR}/mmcif_ddl.dic
+			${CMAKE_CURRENT_SOURCE_DIR}/mmcif_pdbx/dssp-extension.dic)
 	endif()
 
 	target_include_directories(unit-test-dssp PRIVATE
