--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -108,23 +108,7 @@ if(NOT PDB_REDO_META)
 	find_package(cifpp 5.1.0 REQUIRED)
 endif()
 
-# The DSSP code is in a separate library, optionally to be used by others
-add_library(dssp
-	${PROJECT_SOURCE_DIR}/src/dssp.cpp
-	${PROJECT_SOURCE_DIR}/include/dssp.hpp
-	${PROJECT_SOURCE_DIR}/src/dssp-io.cpp
-	${PROJECT_SOURCE_DIR}/src/dssp-io.hpp
-)
-
-add_library(dssp::dssp ALIAS dssp)
-
-target_link_libraries(dssp PUBLIC cifpp::cifpp)
-
-target_include_directories(dssp
-	PUBLIC
-	"$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>"
-	"$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>"
-)
+add_subdirectory(libdssp)
 
 add_executable(mkdssp ${PROJECT_SOURCE_DIR}/src/mkdssp.cpp)
 
@@ -134,86 +118,13 @@ if(USE_RSRC)
 	mrc_target_resources(mkdssp
 		${CIFPP_SHARE_DIR}/mmcif_pdbx.dic
 		${CIFPP_SHARE_DIR}/mmcif_ddl.dic
-		${PROJECT_SOURCE_DIR}/mmcif_pdbx/dssp-extension.dic)
+		${PROJECT_SOURCE_DIR}/libdssp/mmcif_pdbx/dssp-extension.dic)
 endif()
 
 # Install rules
-install(TARGETS dssp
-	EXPORT dsspTargets
-	ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
-	LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-	RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
-	INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
-
-if(MSVC AND BUILD_SHARED_LIBS)
-	install(
-		FILES $<TARGET_PDB_FILE:${PROJECT_NAME}>
-		DESTINATION ${CMAKE_INSTALL_LIBDIR}
-		OPTIONAL)
-endif()
-
-install(EXPORT dsspTargets
-	FILE "dsspTargets.cmake"
-	NAMESPACE dssp::
-	DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/dssp
-)
-
-install(
-	FILES include/dssp.hpp
-	DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
-	COMPONENT Devel
-)
-
-set(CONFIG_TEMPLATE_FILE ${PROJECT_SOURCE_DIR}/cmake/dsspConfig.cmake.in)
-
-configure_package_config_file(
-	${CONFIG_TEMPLATE_FILE}
-	${CMAKE_CURRENT_BINARY_DIR}/dssp/dsspConfig.cmake
-	INSTALL_DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/dssp
-)
-
-install(FILES
-	"${CMAKE_CURRENT_BINARY_DIR}/dssp/dsspConfig.cmake"
-	"${CMAKE_CURRENT_BINARY_DIR}/dssp/dsspConfigVersion.cmake"
-	DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/dssp
-	COMPONENT Devel
-)
-
-set(dssp_MAJOR_VERSION ${CMAKE_PROJECT_VERSION_MAJOR})
-set_target_properties(dssp PROPERTIES
-	VERSION ${PROJECT_VERSION}
-	SOVERSION ${dssp_MAJOR_VERSION}
-	INTERFACE_dssp_MAJOR_VERSION ${dssp_MAJOR_VERSION})
-
-set_property(TARGET dssp APPEND PROPERTY
-	COMPATIBLE_INTERFACE_STRING dssp_MAJOR_VERSION
-)
-
-write_basic_package_version_file(
-	"${CMAKE_CURRENT_BINARY_DIR}/dssp/dsspConfigVersion.cmake"
-	VERSION ${PROJECT_VERSION}
-	COMPATIBILITY AnyNewerVersion
-)
-
-# pkgconfig support
-set(prefix ${CMAKE_INSTALL_PREFIX})
-set(exec_prefix ${CMAKE_INSTALL_PREFIX})
-set(libdir ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR})
-set(includedir ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_INCLUDEDIR})
-
-configure_file(${CMAKE_CURRENT_SOURCE_DIR}/cmake/libdssp.pc.in
-	${CMAKE_CURRENT_BINARY_DIR}/libdssp.pc.in @ONLY)
-file(GENERATE OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/libdssp.pc
-	INPUT ${CMAKE_CURRENT_BINARY_DIR}/libdssp.pc.in)
-install(FILES ${CMAKE_CURRENT_BINARY_DIR}/libdssp.pc DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig)
-
 install(TARGETS ${PROJECT_NAME}
 	RUNTIME DESTINATION ${BIN_INSTALL_DIR}
 )
-
-set(CIFPP_DATA_DIR "${CMAKE_INSTALL_FULL_DATADIR}/libcifpp")
-install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/mmcif_pdbx/dssp-extension.dic"
-        DESTINATION ${CIFPP_DATA_DIR})
 
 if(GENERATE_DOCUMENTATION)
 	# manual
@@ -268,12 +179,12 @@ if(ENABLE_TESTING)
 	# We still depend on boost for the testing headers-only library
 	find_package(Boost REQUIRED)
 
-	add_executable(unit-test-dssp ${PROJECT_SOURCE_DIR}/test/unit-test-dssp.cpp ${PROJECT_SOURCE_DIR}/src/dssp-io.cpp)
+	add_executable(unit-test-dssp ${PROJECT_SOURCE_DIR}/test/unit-test-dssp.cpp ${PROJECT_SOURCE_DIR}/libdssp/src/dssp-io.cpp)
 
 	if(USE_RSRC)
 		mrc_target_resources(unit-test-dssp
 			${CIFPP_SHARE_DIR}/mmcif_pdbx.dic ${CIFPP_SHARE_DIR}/mmcif_ddl.dic
-			${CMAKE_CURRENT_SOURCE_DIR}/mmcif_pdbx/dssp-extension.dic)
+			${CMAKE_CURRENT_SOURCE_DIR}/libdssp/mmcif_pdbx/dssp-extension.dic)
 	endif()
 
 	target_include_directories(unit-test-dssp PRIVATE
