--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -58,6 +58,6 @@ jobs:
       run: cmake --build ${{ steps.strings.outputs.build-output-dir }} --config Release
 
     - name: Test
-      working-directory: ${{ steps.strings.outputs.build-output-dir }}
-      run: ctest --build-config Release --output-on-failure --label-regex unit-test-dssp
+      working-directory: ${{ steps.strings.outputs.build-output-dir }}/test
+      run: ctest --build-config Release --output-on-failure
 
