--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -39,4 +39,6 @@ else()
 	target_compile_definitions(unit-test-dssp PUBLIC CATCH22=1)
 endif()
 
-add_test(NAME unit-test-dssp COMMAND $<TARGET_FILE:unit-test-dssp> --data-dir ${CMAKE_CURRENT_SOURCE_DIR})
+add_test(NAME unit-test-dssp COMMAND $<TARGET_FILE:unit-test-dssp>
+	--data-dir ${CMAKE_CURRENT_SOURCE_DIR}/test
+	--rsrc-dir ${CMAKE_CURRENT_BINARY_DIR}/_deps/cifpp-src/rsrc)
